# RK3568_Yolo

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.ini  web_viewer.cpp  技术报告.md
include/: alarm.h  capture.h  common.h  config.h  inference.h
src/: alarm.cpp  capture.cpp  inference.cpp  main.cpp  postprocess.cc  web_viewer.cpp
